// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with content 1`] = `
<div
  className="container-fluid p-2 d-flex flex-column min-vh-100"
>
  <div
    className="d-flex flex-row align-items-center justify-content-end"
  >
    <h5
      className="me-auto mb-0"
      onClick={[Function]}
    >
      test.md
    </h5>
    <button
      className="btn btn-primary ms-1"
      id="btn-save"
      onClick={[Function]}
      type="button"
    >
      Save
    </button>
    <button
      className="btn btn-primary ms-1"
      id="btn-browse"
      onClick={[Function]}
      type="button"
    >
      Browse
    </button>
    <button
      className="btn btn-primary ms-1"
      id="btn-preview"
      onClick={[Function]}
      type="button"
    >
      Preview
    </button>
    <button
      className="btn btn-primary ms-1"
      id="btn-close"
      onClick={[Function]}
      type="button"
    >
      Close
    </button>
  </div>
  <div
    className="d-flex flex-row flex-fill mt-4"
  >
    <div
      className="position-relative"
      style={
        {
          "flex": 1,
        }
      }
    >
      <textarea
        className="form-control position-absolute"
        onChange={[Function]}
        style={
          {
            "minHeight": "100%",
          }
        }
        value="Hello, world!"
      />
    </div>
  </div>
</div>
`;

exports[`renders with preview enabled 1`] = `
<div
  className="container-fluid p-2 d-flex flex-column min-vh-100"
>
  <div
    className="d-flex flex-row align-items-center justify-content-end"
  >
    <h5
      className="me-auto mb-0"
      onClick={[Function]}
    >
      test.md
    </h5>
    <button
      className="btn btn-primary ms-1"
      id="btn-save"
      onClick={[Function]}
      type="button"
    >
      Save
    </button>
    <button
      className="btn btn-primary ms-1"
      id="btn-browse"
      onClick={[Function]}
      type="button"
    >
      Browse
    </button>
    <button
      className="btn btn-primary ms-1"
      id="btn-preview"
      onClick={[Function]}
      type="button"
    >
      Preview
    </button>
    <button
      className="btn btn-primary ms-1"
      id="btn-close"
      onClick={[Function]}
      type="button"
    >
      Close
    </button>
  </div>
  <div
    className="d-flex flex-row flex-fill mt-4"
  >
    <div
      className="position-relative"
      style={
        {
          "flex": 1,
        }
      }
    >
      <textarea
        className="form-control position-absolute"
        onChange={[Function]}
        style={
          {
            "minHeight": "100%",
          }
        }
        value="Hello, world!"
      />
    </div>
    <div
      className="p-2"
      style={
        {
          "flex": 1,
        }
      }
    >
      <p>
        Hello, world!
      </p>
    </div>
  </div>
</div>
`;

exports[`renders without crashing 1`] = `
<div
  className="container-fluid p-2 d-flex flex-column min-vh-100"
>
  <div
    className="d-flex flex-row align-items-center justify-content-end"
  >
    <h5
      className="me-auto mb-0"
      onClick={[Function]}
    >
      test.md
    </h5>
    <button
      className="btn btn-primary ms-1"
      id="btn-save"
      onClick={[Function]}
      type="button"
    >
      Save
    </button>
    <button
      className="btn btn-primary ms-1"
      id="btn-browse"
      onClick={[Function]}
      type="button"
    >
      Browse
    </button>
    <button
      className="btn btn-primary ms-1"
      id="btn-preview"
      onClick={[Function]}
      type="button"
    >
      Preview
    </button>
    <button
      className="btn btn-primary ms-1"
      id="btn-close"
      onClick={[Function]}
      type="button"
    >
      Close
    </button>
  </div>
  <div
    className="d-flex flex-row flex-fill mt-4"
  >
    <div
      className="position-relative"
      style={
        {
          "flex": 1,
        }
      }
    >
      <textarea
        className="form-control position-absolute"
        onChange={[Function]}
        style={
          {
            "minHeight": "100%",
          }
        }
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`save button click 1`] = `
<div
  className="container-fluid p-2 d-flex flex-column min-vh-100"
>
  <div
    className="d-flex flex-row align-items-center justify-content-end"
  >
    <h5
      className="me-auto mb-0"
      onClick={[Function]}
    >
      test.md
    </h5>
    <span
      className="ms-1"
    >
      <small>Last saved at</small>
    </span>
    <button
      className="btn btn-primary ms-1"
      id="btn-save"
      onClick={[Function]}
      type="button"
    >
      Save
    </button>
    <button
      className="btn btn-primary ms-1"
      id="btn-browse"
      onClick={[Function]}
      type="button"
    >
      Browse
    </button>
    <button
      className="btn btn-primary ms-1"
      id="btn-preview"
      onClick={[Function]}
      type="button"
    >
      Preview
    </button>
    <button
      className="btn btn-primary ms-1"
      id="btn-close"
      onClick={[Function]}
      type="button"
    >
      Close
    </button>
  </div>
  <div
    className="d-flex flex-row flex-fill mt-4"
  >
    <div
      className="position-relative"
      style={
        {
          "flex": 1,
        }
      }
    >
      <textarea
        className="form-control position-absolute"
        onChange={[Function]}
        style={
          {
            "minHeight": "100%",
          }
        }
        value="Hello, world!"
      />
    </div>
  </div>
</div>
`;

exports[`should enter file name edit mode 1`] = `
<div
  className="container-fluid p-2 d-flex flex-column min-vh-100"
>
  <div
    className="d-flex flex-row align-items-center justify-content-end"
  >
    <input
      autoFocus={true}
      className="form-control me-auto"
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
      value="test.md"
    />
    <button
      className="btn btn-primary ms-1"
      id="btn-save"
      onClick={[Function]}
      type="button"
    >
      Save
    </button>
    <button
      className="btn btn-primary ms-1"
      id="btn-browse"
      onClick={[Function]}
      type="button"
    >
      Browse
    </button>
    <button
      className="btn btn-primary ms-1"
      id="btn-preview"
      onClick={[Function]}
      type="button"
    >
      Preview
    </button>
    <button
      className="btn btn-primary ms-1"
      id="btn-close"
      onClick={[Function]}
      type="button"
    >
      Close
    </button>
  </div>
  <div
    className="d-flex flex-row flex-fill mt-4"
  >
    <div
      className="position-relative"
      style={
        {
          "flex": 1,
        }
      }
    >
      <textarea
        className="form-control position-absolute"
        onChange={[Function]}
        style={
          {
            "minHeight": "100%",
          }
        }
        value="Hello, world!"
      />
    </div>
  </div>
</div>
`;
